# nextcloud-config-parser

./: Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
examples/: config.rs
src/: lib.rs  nc.rs  php.rs
tests/: configs.rs
tests/configs/: full_redis.php  mysql_ip_no_verify.php  mysql_ssl_ca.php  mysql_ssl_ca_no_verify.php  nested_array.php  non_literal.php  postgres_escape.php  postgres_fqdn.php  postgres_ip.php  postgres_socket_no_host.php  postgres_socket_no_pass.php  redis_cluster_tls.php  redis_tls.php  sqlite_default_db.php
tests/configs/multiple/: config.php  other.php
