[package]
name = "nextcloud-config-parser"
description = "Rust parser for nextcloud config files"
version = "0.9.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/nextcloud-config-parser"
documentation = "https://docs.rs/nextcloud-config-parser"
rust-version = "1.65.0"

[dependencies]
redis = { version = "0.24.0", optional = true, default-features = false }
thiserror = "1.0.56"
php-literal-parser = "0.5.1"
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio-rustls", "any", "mysql", "sqlite", "postgres"], optional = true }
miette = "5.10.0"
futures-core = "0.3.30"
urlencoding = "2.1.3"
form_urlencoded = "1.2.1"

[dev-dependencies]
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio-rustls", "any", "mysql", "sqlite", "postgres"] }
miette = { version = "5.10.0", features = ["fancy"] }

[features]
db-sqlx = ["sqlx"]
redis-connect = ["redis"]
