[package]
name = "nextcloud-config-parser"
description = "Rust parser for nextcloud config files"
version = "0.11.1"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/nextcloud-config-parser"
documentation = "https://docs.rs/nextcloud-config-parser"
rust-version = "1.74.1"

[dependencies]
redis = { version = "0.26.1", optional = true, default-features = false }
thiserror = "2.0.6"
php-literal-parser = "0.6.2"
sqlx = { version = "0.8.2", default-features = false, features = ["any", "mysql", "sqlite", "postgres"], optional = true }
miette = "7.4.0"
futures-core = "0.3.31"
urlencoding = "2.1.3"
form_urlencoded = "1.2.1"

[dev-dependencies]
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio-rustls", "any", "mysql", "sqlite", "postgres"] }
miette = { version = "7.4.0", features = ["fancy"] }

[features]
db-sqlx = ["sqlx"]
redis-connect = ["redis"]
