[package]
name = "nextcloud-config-parser"
description = "Rust parser for nextcloud config files"
version = "0.13.1"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/nextcloud-config-parser"
documentation = "https://docs.rs/nextcloud-config-parser"
rust-version = "1.81.0"

[dependencies]
thiserror = "2.0.11"
php-literal-parser = "0.6.2"
miette = "7.4.0"
urlencoding = "2.1.3"
form_urlencoded = "1.2.1"
itertools = "0.14.0"

[dev-dependencies]
miette = { version = "7.4.0", features = ["fancy"] }
sqlx = { version = "0.8.3", default-features = false, features = ["any", "mysql", "sqlite", "postgres"] }
redis = "0.30.0"
